Fixed text aligning

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -11,7 +11,7 @@
 
 .contactDetails {
   color: black;
-  text-align: center;
+  text-align: left;
 }
 
 .deleteButton {
